--- a/templates/index.html
+++ b/templates/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <script src="static/background.js"></script>
+    <script src="static/squares.js"></script>
     <script src="static/script.js"></script>
 </body>
 </html>
